log
Sat 15 Apr 2023 11:33:58 PM UTC: 
 tests:  0|6
total_score: 0/70
40addcc
Sat 15 Apr 2023 11:42:36 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b30441e
Sat 15 Apr 2023 11:42:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f30092e
Sat 15 Apr 2023 11:44:15 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
9a05890
Sat 15 Apr 2023 11:46:32 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8af62d5
Sun 16 Apr 2023 12:02:45 AM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:12: error: request for member ‘buckets’ in something not a structure or union
   44 |     if(hash->buckets[i]->key == NULL)
      |            ^~
hashmap.c:46:20: error: request for member ‘buckets’ in something not a structure or union
   46 |         strcpy(hash->buckets[i]->key,key);
      |                    ^~
hashmap.c:47:13: error: request for member ‘buckets’ in something not a structure or union
   47 |         hash->buckets[i]->value = value;
      |             ^~
hashmap.c:49:20: error: request for member ‘buckets’ in something not a structure or union
   49 |         while (hash->buckets[i]->key != NULL){
      |                    ^~
hashmap.c:52:20: error: request for member ‘buckets’ in something not a structure or union
   52 |         strcpy(hash->buckets[i]->key,key);
      |                    ^~
hashmap.c:53:13: error: request for member ‘buckets’ in something not a structure or union
   53 |         hash->buckets[i]->value = value;
      |             ^~
Compilation failed
1b79761
Sun 16 Apr 2023 12:03:19 AM UTC: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
e2d902d
